# Skill-Forge-Rust

./: .env  .env.test  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: api.rs  lib.rs  main.rs  server.rs
src/models/: user.rs
src/routes/: auth.rs  index.rs  mod.rs  protected.rs
src/services/: auth.rs  mod.rs  mongo.rs
tests/: auth_test.rs  login_tests.rs
